fixed layout bugs

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
   background-color: #fff;
 }
 
-.bg-fsfdff {
+.bg-fcfdff {
   background-color: #fcfdff;
 }
 
@@ -113,10 +113,6 @@ a {
   justify-content: space-between;
 }
 
-.justify-content-center {
-  justify-content: center;
-}
-
 .justify-content-around {
   justify-content: space-around;
 }
@@ -139,6 +135,10 @@ a {
 
 .text-align-right {
   text-align: right;
+}
+
+.text-align-left {
+  text-align: left;
 }
 
 .m-0 {
@@ -362,6 +362,10 @@ a {
   padding-left: 271px;
 }
 
+.pl-23 {
+  padding-left: 23px;
+}
+
 .py-118 {
   padding-top: 118px;
   padding-bottom: 118px;
@@ -428,12 +432,6 @@ a {
 .line-743 {
   width: 743px;
   border: 1px solid #d8e3fe;
-}
-
-.hero-image {
-  padding-top: 91px;
-  padding-bottom: 28px;
-  background: linear-gradient(180deg, #F4F7FF 0%, #F1F5FF 100%);
 }
 
 .bg-hr {
@@ -516,19 +514,6 @@ a {
   height: 69px;
 }
 
-.bg-ellipse-white {
-  background: no-repeat url(../images/Ellipse-white.png);
-  background-size: cover;
-  width: 152px;
-  height: 152px;
-}
-
-.bg-Vector-21 {
-  background: no-repeat url(../images/Vector-21.png);
-  height: 347px;
-  width: 100vw;
-}
-
 .w-1163 {
   width: 1163.5px;
 }
@@ -551,6 +536,10 @@ a {
 
 .w-337 {
   width: 337px;
+}
+
+.w-330 {
+  width: 330px;
 }
 
 .w-279 {
@@ -591,12 +580,6 @@ a {
 
 .w-60 {
   width: 60px;
-}
-
-.bg-photo-1 {
-  background: no-repeat url(../images/photo-1.png);
-  width: 267px;
-  height: 267px;
 }
 
 #about-us h4 {
